sd-core/src/snapshots/sd_core__graph__tests__free_vars_ad-minimal.chil.snap
---
source: sd-core/src/graph.rs
expression: variables
---
[
    Variable(
        "var_198",
    ),
    Variable(
        "var_34",
    ),
    Variable(
        "var_422",
    ),
    Variable(
        "var_44",
    ),
    Variable(
        "var_580",
    ),
    Variable(
        "var_77",
    ),
]
