sd-core/src/snapshots/sd_core__graph__tests__free_vars_buggy.sd.snap
---
source: sd-core/src/graph.rs
expression: variables
---
[
    Variable(
        "a",
    ),
    Variable(
        "b",
    ),
]
