sd-core/src/snapshots/sd_core__graph__tests__free_vars_fibonacci.chil.snap
---
source: sd-core/src/graph.rs
expression: expr.free_var_test()
---
{
    Variable {
        name: Some(
            Identifier(
                "toString",
            ),
        ),
        addr: Addr(
            '%',
            66,
        ),
    },
    Variable {
        name: Some(
            Identifier(
                "flush_0",
            ),
        ),
        addr: Addr(
            '%',
            71,
        ),
    },
    Variable {
        name: Some(
            Identifier(
                "print",
            ),
        ),
        addr: Addr(
            '%',
            76,
        ),
    },
}
