sd-core/src/snapshots/sd_core__graph__tests__free_vars_thunk_copy.sd.snap
---
source: sd-core/src/graph.rs
expression: expr.free_vars()
---
{
    Variable(
        "y",
    ),
}
