sd-core/src/snapshots/sd_core__graph__tests__free_vars_tuples.sd.snap
---
source: sd-core/src/graph.rs
expression: expr.free_vars()
---
{
    Variable(
        "x",
    ),
    Variable(
        "y",
    ),
}
