sd-core/src/snapshots/sd_core__graph__tests__free_vars_with_only_free.sd.snap
---
source: sd-core/src/graph.rs
expression: expr.free_var_test()
---
{
    Variable(
        "y",
    ),
    Variable(
        "a",
    ),
}
